<?xml version="1.0" encoding="UTF-8"?>
<!--
Copyright (c) 2025, 2025, Oracle and/or its affiliates. All rights reserved.
DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.

The Universal Permissive License (UPL), Version 1.0

Subject to the condition set forth below, permission is hereby granted to any
person obtaining a copy of this software, associated documentation and/or
data (collectively the "Software"), free of charge and under any and all
copyright rights in the Software, and any and all patent rights owned or
freely licensable by each licensor hereunder covering either (i) the
unmodified Software as contributed to or provided by such licensor, or (ii)
the Larger Works (as defined below), to deal in both

(a) the Software, and

(b) any piece of software and/or hardware listed in the lrgrwrks.txt file if
one is included with the Software each a "Larger Work" to which the Software
is contributed by such licensors),

without restriction, including without limitation the rights to copy, create
derivative works of, display, perform, and distribute the Software and make,
use, sell, offer for sale, import, export, have made, and have sold the
Software and the Larger Work(s), and to sublicense the foregoing rights on
either these or other terms.

This license is subject to the following condition:

The above copyright notice and either this complete permission notice or at a
minimum a reference to the UPL must be included in all copies or substantial
portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.graalvm.python</groupId>
    <artifactId>graalpy-extensions</artifactId>
    <version>${revision}</version>
  </parent>

  <name>GraalPy Java Interface Generator</name>
  <artifactId>javainterfacegen</artifactId>
  <description>A utility to generate Java interfaces from (typed) Python
    libraries that allow convenient access to Python libraries from Java using
    the Graal Polyglot API behind the scenes.
  </description>
  <packaging>jar</packaging>

  <properties>
    <!-- overridden to G1 on Linux -->
    <native.image.gc>serial</native.image.gc>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.graalvm.python</groupId>
      <artifactId>${project.python.artifact}</artifactId>
      <version>${project.polyglot.version}</version>
      <type>pom</type>
    </dependency>
    <dependency>
      <groupId>${project.groupId}</groupId>
      <artifactId>python-embedding</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>
    <!-- TODO: migrate to JUnit 5 to align with other projects -->
    <!--        <dependency>-->
    <!--            <groupId>org.junit.jupiter</groupId>-->
    <!--            <artifactId>junit-jupiter</artifactId>-->
    <!--            <version>${project.junit.version}</version>-->
    <!--            <scope>test</scope>-->
    <!--        </dependency>-->
    <dependency>
      <groupId>org.yaml</groupId>
      <artifactId>snakeyaml</artifactId>
      <version>2.3</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>21</source>
          <target>21</target>
          <release>21</release>
          <compilerArgs>
            <arg>-Xlint:none</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <!-- prevent deployment -->
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-deploy-plugin</artifactId>
        <version>3.1.4</version>
        <inherited>false</inherited>
        <configuration>
          <skip>true</skip>
        </configuration>
      </plugin>
      <plugin>
        <!-- prevent installation -->
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-install-plugin</artifactId>
        <version>3.1.4</version>
        <inherited>false</inherited>
        <configuration>
          <skip>true</skip>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.1.2</version>
        <configuration>
          <argLine>-Xss64M --add-opens
            org.graalvm.python.javainterfacegen/org.graalvm.python.javainterfacegen=ALL-UNNAMED
          </argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.graalvm.python</groupId>
        <artifactId>graalpy-maven-plugin</artifactId>
        <version>${project.version}</version>
        <executions>
          <execution>
            <configuration>
              <packages>
                <package>mypy==1.13.0</package>
                <package>mypy-extensions==1.1.0</package>
                <package>typing-extensions==4.14.0</package>
              </packages>
              <resourceDirectory>
                GRAALPY-VFS/${project.groupId}/${project.artifactId}
              </resourceDirectory>
            </configuration>
            <goals>
              <goal>process-graalpy-resources</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.5.1</version>
        <executions>
          <execution>
            <goals>
              <goal>java</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <mainClass>org.graalvm.python.javainterfacegen.Main</mainClass>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>linux</id>
      <activation>
        <os>
          <family>Unix</family>
          <name>Linux</name>
        </os>
      </activation>
      <properties>
        <native.image.gc>G1</native.image.gc>
      </properties>
    </profile>
    <profile>
      <id>native</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.graalvm.buildtools</groupId>
            <artifactId>native-maven-plugin</artifactId>
            <version>0.9.27</version>
            <extensions>true</extensions>
            <executions>
              <execution>
                <id>build-native</id>
                <goals>
                  <goal>compile-no-fork</goal>
                </goals>
                <phase>package</phase>
              </execution>
            </executions>
            <configuration>
              <buildArgs>
                <buildArg>-H:+IncludeLanguageResources</buildArg>
                <buildArg>-Dpython.WithoutSSL=true</buildArg>
                <buildArg>-Dpython.WithoutNativePosix=true</buildArg>
                <buildArg>-Dtruffle.TruffleRuntime=com.oracle.truffle.api.impl.DefaultTruffleRuntime
                </buildArg>
                <buildArg>-Dpolyglot.engine.WarnInterpreterOnly=false</buildArg>
                <buildArg>-Dimage-build-time.PreinitializeContexts=</buildArg>
                <buildArg>--gc=${native.image.gc}</buildArg>
              </buildArgs>
              <fallback>false</fallback>
              <mainClass>org.graalvm.python.javainterfacegen.Main</mainClass>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>
